fix: viewport height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
             "mobileNavbar mobileNavbar";
         grid-template-columns: 1fr;
         grid-template-rows: 65px 1fr 95px 55px;
+        height: 100svh;
     }
 
     .sidebar {
